
[TestGetUser/successful - 1]
nil
---

[TestGetUser/successful - 2]
{
 "CreatedAt": "<Any value>",
 "Email": "email0",
 "ID": "<Any value>",
 "PasswordHash": "cGFzc3dvcmRoYXNoMA==",
 "PasswordSalt": "passwordsalt0",
 "UpdatedAt": "<Any value>",
 "Username": "username0"
}
---

[TestGetUser/not_found - 1]
&errors.fundamental{
    msg:   "user not found",
    stack: &errors.stack{0x5fcc01, 0x450b38, 0x441fe5, 0x441ece, 0x47e561},
}
---

[TestGetUser/not_found - 2]
null
---

[TestInsertUser/successful - 1]
nil
---

[TestInsertUser/username_taken - 1]
&errors.fundamental{
    msg:   "username taken",
    stack: &errors.stack{0x5fcc01, 0x450b38, 0x441fe5, 0x441ece, 0x47e561},
}
---

[TestInsertUser/email_taken - 1]
&errors.fundamental{
    msg:   "email taken",
    stack: &errors.stack{0x5fcc01, 0x450b38, 0x441fe5, 0x441ece, 0x47e561},
}
---
